force-app/main/default/objects/Opportunity/fields/LeadOppScore__Email__c.field-meta.xml
<CustomField>
    <fullName>LeadOppScore__Email__c</fullName>
    <label>Email</label>
    <type>Email</type>
</CustomField>