force-app/main/default/objects/Opportunity/fields/LeadOppScore__Opportunity_Score__c.field-meta.xml
<CustomField>
    <fullName>LeadOppScore__Opportunity_Score__c</fullName>
    <label>Opportunity Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>