force-app/main/default/objects/Opportunity/fields/LeadOppScore__Phone__c.field-meta.xml
<CustomField>
    <fullName>LeadOppScore__Phone__c</fullName>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>