force-app/main/default/objects/Opportunity/fields/LeadOppScore__Score_Per__c.field-meta.xml
<CustomField>
    <fullName>LeadOppScore__Score_Per__c</fullName>
    <label>Score (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>